--- a/style.css
+++ b/style.css
@@ -92,3 +92,7 @@ section .btnone{ background: #00b894;
 section .btntwo{background-color: white;}
 h6{color: rgba(239, 17, 17, 0.833);
 text-transform: lowercase;}
+div {
+    background-color: darkgray;text-align: center; ;
+}
+h3{color: rgb(224, 15, 172);}
